test/src/e2e_vm_tests/test_programs/should_fail/generics_not_supported/src/inner_lib.sw
library inner_lib;

const C = 42;

pub enum MyEnum<T> {
    VariantA: (),
    VariantB: T
}

pub fn func() -> bool {
    true
}

pub struct S2 {}

impl S2 {
    pub fn new2() -> Self {
        S2 {}
    }
}